--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="#" class="header__logo">
         <img class="header__logo-image"
         src="./images/logo-black.svg"
-        alt="Логотип сайта"
+        alt="Логотип Оно тебе надо"
         />
       </a>
       <address class="address">
