--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <a href="#" class="header__links header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a href="#" class="header__links" href="#">посмотреть лоты</a>
+            <a href="#" class="header__links">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a href="#" class="header__links" href="#">об аукционе</a>
+            <a href="#" class="header__links">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -31,7 +31,7 @@
         />
       </a>
       <address class="address">
-        <a href="tel:+9 999 555 5555">+ 9 999 555 5555</a>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
           <br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- <br>265, Амстердам</p>
@@ -137,7 +137,7 @@
 
     <footer class="footer">
       <address class="address">
-        <a href="tel:+9 999 555 5555">+ 9 999 555 5555</a>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
         <br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- <br>265, Амстердам</p>
@@ -149,18 +149,16 @@
               главная
             </a>
           </li>
-          <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a href="#" class="footer__menu-link">
+                посмотреть лоты
+            </a>
+          </li>
             <li class="footer__menu-list-item">
               <a href="#" class="footer__menu-link">
-                посмотреть лоты
+                об аукционе
               </a>
             </li>
-            <ul class="footer__menu-list">
-              <li class="footer__menu-list-item">
-                <a href="#" class="footer__menu-link">
-                  об аукционе
-                </a>
-              </li>
         </ul>
       </nav>
       <div>
