--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a href="#" class="footer__menu-link_active">
+            <a href="#" class="footer__menu-link footer__menu-link_active">
               главная
             </a>
           </li>
